# lab11_textures_FBOs_template

./: CMakeLists.txt  README.md  glrenderer.cpp  glrenderer.h  main.cpp  mainwindow.h
CS1230Lib/: shaderloader.h
Resources/Shaders/: texture.frag  texture.vert
src/: glrenderer.cpp  glrenderer.h  mainwindow.cpp  shaderloader.h
